fix: ui: fixed font not showing

--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @font-face {
-  font-family: "Jetbrains-Mono";
-  src: url("public/fonts/JetBrainsMono-Regular.ttf") format('ttf');
-  font-weight: 400;
-  font-style: normal;
+	font-family: "Jetbrains-Mono";
+	src: url("public/fonts/JetBrainsMono-Regular.ttf") format("truetype");
+	font-weight: 400;
+	font-style: normal;
 }
 
 .jb {
-  font-family: 'Jetbrains-Mono';
+	font-family: "Jetbrains-Mono", monospace;
 }
